# yt-album-extractor

./: README.md  main.py  pyproject.toml  requirements.txt
src/yt_album_extractor/: cli.py  utils.py
src/yt_album_extractor/rippers/: __init__.py  video.py
